--- a/app/views/cross-domain-local-storage.html
+++ b/app/views/cross-domain-local-storage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Cross domain local storage</title>
-    <script src="../dist/xdLocalStoragePostMessageApi.min.js"></script>
+    <script src="../../dist/xdLocalStoragePostMessageApi.min.js"></script>
 </head>
 <body>
 This is the magical iframe
