--- a/app/views/cross-domain-local-storage.html
+++ b/app/views/cross-domain-local-storage.html
@@ -6,5 +6,11 @@
 </head>
 <body>
 This is the magical iframe
+
+<script type="text/javascript">
+window.onload = function() {
+  xdLocalStorageEmbedded.init( "ls" );
+};
+</script>
 </body>
 </html>
